<resources>
    <string name="app_name">SalesAppDemo</string>
    <string name="OpenDrawer">Open navigation drawer</string>
    <string name="CloseDrawer">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sale">Sale</string>
    <string name="target">Target</string>
    <string name="Level">Level :</string>
    <string name="card">Card :</string>
    <string name="sales_percentage">sales percentage -</string>
    <string name="day_s_remaining">day(s) remaining</string>
    <string name="submit">Submit</string>
    <string name="main_show_phone_call_list">android.intent.action.SHOW_PHONE_CALL_LIST</string>
    <string name="last_phone_call_state_key">activityLpcsKey</string>
    <string name="last_phone_call_bparty_key">activityLpbpKey</string>
    <string name="lead_status">View Assigned Leads </string>
    <string name="Clear">Cancel </string>
    <string name="lead_status_count">[ Total %d Records Found ]</string>
</resources>